[package]
name = "workstation"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
expanduser = "1.2.2"
eyre = "0.6.12"
flate2 = "1.0.33"
indicatif = "0.17.8"
reqwest = { version = "0.12.7", features = ["blocking", "native-tls-vendored"] }
serde = { version = "1.0.210", features = ["derive"] }
tar = "0.4.41"
toml = "0.8.19"
zip = "2.2.0"
